fix: Alignment for Back To Home
Before we were displaying an image but
now we display an svg instead. So let's
update the selector to target also SVG

--- a/src/styles/apps.css
+++ b/src/styles/apps.css
@@ -179,7 +179,7 @@
   display: flex;
   justify-content: flex-start;
 }
-[role=banner] [role=menuitem].coz-apps-home-btn img {
+[role=banner] [role=menuitem].coz-apps-home-btn img, .coz-apps-home-btn svg {
   width: 1rem;
   height: 1rem;
   margin-right: .5rem;
